[package]
name = "timed_set"
version = "0.0.1"
description = "A simple timed set in Rust to store elements for a given time period."
authors = ["Marirs <marirs@gmail.com>"]
readme = "README.md"

edition = "2021"

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
